# lan_sync

./: .gitignore  CMakeLists.txt
demo/: .gitignore  Makefile  discover.c  discover.cpp  discover.h  discover_server.c  discover_server.cpp  discover_server.h  lan_share_protocol.cpp  lan_share_protocol.h  resource.cpp  resource.h  resource_manager.cpp  resource_manager.h  sdn_share_protocol.cpp  sdn_share_protocol.h
demo/comm/: lan_share_protocol.cpp  lan_share_protocol.h  udp_cli.cpp
demo/test/: .gitignore  Makefile  lan_share_protocol_test.cpp  properties_parse_test.cpp  test.properties
demo/utils/: color.h  openssl_utils.cpp  openssl_utils.h  properties_parse.cpp
docs/: bug.md  readme.md  resource_manager.md  timer.md  todo.md
etc/: common.cmake  tests.cmake
examples/: .gitignore  CMakeLists.txt  Makefile  cli.properties  properties.properties  srv.properties  sync_cli.cpp  sync_server.cpp  tcpcli.cpp  tcpserver.cpp  udpcli.cpp  udpserver.cpp
plugins/wireshark/: lan_sync_proto.lua  readme.md
resources/: c_cpp_properties.json
resources/network/: TCPIP详解卷1.txt  TCPIP详解卷2.txt
resources/program_language/: c.txt  go.txt
src/: .gitignore  Makefile  constants.h  discover.cpp  discover.h  discover_server.cpp  discover_server.h  main.cpp  main.h  properties.properties  sync_cli.cpp  sync_cli.h  sync_server.cpp  sync_server.h
src/bak/: sync.cpp  sync.h  sync_cli.cpp  sync_cli.h
src/comm/: lan_share_protocol.cpp  lan_share_protocol.h  network_layer.cpp  network_layer.h  network_layer_tcp_with_event.cpp  network_layer_tcp_with_event.h  udp_cli.cpp  udp_cli.h
src/components/: SyncIOReadMonitor.cpp  SyncIOReadMonitor.h  abs_buf.cpp  buf_base_on_event.cpp  buf_base_on_event.h  common.cpp  common.h  sync_comm_dto.cpp  sync_comm_dto.h  sync_io_read_monitor.cpp  sync_io_read_monitor.h  sync_mod_conn_mediator.cpp  sync_mod_conn_mediator.h  sync_network_conn_ctx.cpp  sync_network_conn_ctx.h  sync_trigger.cpp  sync_trigger.h
src/constants/: constants.h
src/examples/: Makefile  tcpcli.cpp  tcpserver.cpp  timer.cpp  udpcli.cpp  udpserver.cpp
src/logics/: common_logic.cpp  common_logic.h  sync_cli_discover_logic.cpp  sync_cli_logic.cpp  sync_cli_logic.h  sync_cli_sync_logic.cpp  sync_cli_sync_logic.h
src/modules/: abst_net_conn_setup.h  block.cpp  block.h  concrete_net_setup.cpp  concrete_net_setup.h  concrete_net_trigger.cpp  concrete_net_trigger.h  config_manager.cpp  config_manager.h  discovery_trigger.cpp  discovery_trigger.h  logic.cpp  logic.h  net_cli_conn_setup_for_discover.cpp  net_cli_conn_setup_for_discover.h  net_cli_conn_setup_for_req_tb_idx.cpp  net_cli_conn_setup_for_req_tb_idx.h  net_cli_discover.cpp  net_cli_discover.h  net_cli_logic_container.cpp  net_cli_logic_container.h  net_cli_req_table_index.cpp  net_cli_req_table_index.h  net_trigger.cpp  net_trigger.h  network_cli.cpp  network_cli.h  resource_manager.cpp  resource_manager.h  rs_local_manager.cpp  rs_local_manager.h  rs_manager.cpp  rs_manager.h  rs_sync_mamanger.cpp  rs_sync_mamanger.h  (+2 more)
test/: 1710416274.txt  Makefile  fixture_example.cpp  lan_share_protocol_test.cpp  net_addr_test.cpp  properties_parse_test.cpp  resource_manager_test.cpp  rs_sync_mamanger_test.cpp
test/unit_test/: CMakeLists.txt  Makefile  fixture_example.cpp  io_utils_test.cpp  lan_share_protocol_test.cpp  openssl_utils_test.cpp  properties_parse_test.cpp  rs_sync_mamanger_test.cpp  task_test.cpp  test_task_manager.h
(+89 files in other folders)
